--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir = "ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
 
@@ -38,7 +40,7 @@
   <!-- Timeline Cards Section: Each card shows a milestone year and event -->
   <section>
     <!-- Card 1: 1968 -->
-    <div>
+    <carddiv>
       <h2>1968</h2>
       <h3>Intel Founded</h3>
       <img src="img/1.jpg" alt="Intel founders" />
@@ -48,10 +50,10 @@
         NM Electronics to Intel Corporation, laying the foundation for 
         decades of technological innovation.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 2: 1971 -->
-    <div>
+    <carddiv>
       <h2>1971</h2>
       <h3>First Microprocessor</h3>
       <img src="img/2.jpg" alt="Intel 4004 Microprocessor" />
@@ -61,10 +63,10 @@
         igniting the microprocessor revolution and propelling the future 
         of computing devices.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 3: 1978 -->
-    <div>
+    <carddiv>
       <h2>1978</h2>
       <h3>8086 Processor</h3>
       <img src="img/3.jpg" alt="Intel 8086 Processor"/>
@@ -73,10 +75,10 @@
         Launch of the 8086 processor, establishing the x86 architecture 
         that drives countless PCs and servers in the modern era.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 4: 1985 -->
-    <div>
+    <carddiv>
       <h2>1985</h2>
       <h3>386 Processor</h3>
       <img src="img/4.jpg" alt="Intel 386 Processor"/>
@@ -86,10 +88,10 @@
         ushering in a new era of performance and multitasking for 
         personal computers.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 5: 2006 -->
-    <div>
+    <carddiv>
       <h2>2006</h2>
       <h3>Peak GHG Emissions</h3>
       <img src="img/Emissions.jpg" alt="Peak GHG Emissions"/>
@@ -100,10 +102,10 @@
         chemical abatement, renewable energy, and energy-efficient 
         manufacturing to reverse this trend.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 6: 2020 -->
-    <div>
+    <carddiv>
       <h2>2020</h2>
       <h3>RISE Strategy</h3>
       <img src="img/Ocean.jpg" alt="RISE Strategy"/>
@@ -113,10 +115,10 @@
         Enabling) strategy and 2030 goals, aiming to drive industry-wide 
         progress on climate action, water stewardship, and waste reduction.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 7: 2022 -->
-    <div>
+    <carddiv>
       <h2>2022</h2>
       <h3>Net-Zero By 2040</h3>
       <img src="img/Sky.jpg" alt="Net-Zero By 2040" loading="eager" />
@@ -126,10 +128,10 @@
         gas emissions (Scope 1 and 2) across its global operations 
         by 2040, building on years of environmental initiatives.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 8: 2023 -->
-    <div>
+    <carddiv>
       <h2>2023</h2>
       <h3>Renewable Electricity</h3>
       <img src="img/Solar.jpg" alt="Renewable Electricity" loading="eager" />
@@ -139,10 +141,10 @@
         helping to drastically lower carbon emissions and driving progress 
         toward Intel's long-term sustainability goals.
       </p>
-    </div>
+    </carddiv>
 
     <!-- Card 9: 2024 -->
-    <div>
+    <carddiv>
       <h2>2024</h2>
       <h3>Sustainability Summit</h3>
       <img src="img/Intelsquare.jpg" alt="Sustainability Summit" loading="eager" />
@@ -152,12 +154,120 @@
         government officials, and industry leaders to collaborate on 
         next-generation sustainable semiconductor manufacturing.
       </p>
-    </div>
+    </carddiv>
   </section>
 
   <!-- Instruction for users -->
   <p class="scroll-instruction">
     Scroll to view timeline | Hover over cards to learn more!
   </p>
+
+ <!-- 3-Column Content Section -->
+  <section>
+    <!-- Bootstrap container for proper spacing -->
+    <div class="container">
+      <!-- Bootstrap row to hold the columns -->
+      <div class="row">
+        
+        <!-- Column 1: Uses col-md-4 to take up 1/3 of the row on medium+ screens -->
+        <div class="col-md-4">
+          <h2>RISE Strategy</h2>
+          <p>
+            Under its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy, 
+            Intel sets ambitious 2030 goals, including driving industry-wide 
+            progress on climate action, water stewardship, and waste reduction.
+          </p>
+          <!-- Learn More Button -->
+          <a href="#">Learn More</a>
+        </div>
+
+        <!-- Column 2 -->
+        <div class="col-md-4">
+          <h2>Commitment</h2>
+          <p>
+            In 2022, Intel pledged to achieve net-zero greenhouse gas emissions 
+            (Scope 1 and 2) by 2040. This commitment builds on decades of 
+            environmental initiatives and partnerships across the semiconductor 
+            industry.
+          </p>
+          <!-- Learn More Button -->
+          <a href="#">Learn More</a>
+        </div>
+
+        <!-- Column 3 -->
+        <div class="col-md-4">
+          <h2>Water &amp; Waste</h2>
+          <p>
+            Intel conserves billions of gallons of water annually and 
+            collaborates with local communities to restore watersheds.
+            Intel also upcycles and recycles materials to reduce waste and 
+            advance a circular economy.
+          </p>
+          <!-- Learn More Button -->
+          <a href="#">Learn More</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- Subscription Form -->
+  <section>
+    <h2>Subscribe to our Newsletter</h2>
+    <!-- Add form here -->
+  </section>
+
+
+
+  <script>
+    // List of right-to-left language codes
+    const rtlLanguages = ['ar', 'he', 'fa', 'ur'];
+
+
+    // Function to set RTL or LTR direction based on language code
+    function updateDirectionByLang(lang) {
+      const htmlTag = document.documentElement;
+      if (lang && rtlLanguages.includes(lang.toLowerCase())) {
+        htmlTag.setAttribute('dir', 'rtl');
+      } else {
+        htmlTag.setAttribute('dir', 'ltr');
+      }
+    }
+
+
+    // Function to detect Google Translate language changes
+    function observeLangChange() {
+      let lastLang = document.documentElement.getAttribute('lang');
+      updateDirectionByLang(lastLang);
+
+
+      // Observe changes to the <html> lang attribute
+      const observer = new MutationObserver(() => {
+        const newLang = document.documentElement.getAttribute('lang');
+        if (newLang !== lastLang) {
+          updateDirectionByLang(newLang);
+          lastLang = newLang;
+        }
+      });
+
+
+      observer.observe(document.documentElement, { attributes: true, attributeFilter: ['lang'] });
+
+
+      // Also check every second in case Google Translate changes text but not the lang attribute
+      setInterval(() => {
+        const currentLang = document.documentElement.getAttribute('lang');
+        if (currentLang !== lastLang) {
+          updateDirectionByLang(currentLang);
+          lastLang = currentLang;
+        }
+      }, 1000);
+    }
+
+
+    // Run after page loads
+    window.addEventListener('DOMContentLoaded', observeLangChange);
+  </script>
+
 </body>
 </html>
