--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+  <!-- Add Bootstrap Icons CDN in <head> for easy icon use -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
@@ -164,26 +167,33 @@
 
  <!-- 3-Column Content Section -->
   <section>
-    <!-- Bootstrap container for proper spacing -->
-    <div class="container">
+    <!-- Bootstrap container-fluid for full-width layout -->
+    <div class="container-fluid">
       <!-- Bootstrap row to hold the columns -->
       <div class="row">
         
         <!-- Column 1: Uses col-md-4 to take up 1/3 of the row on medium+ screens -->
         <div class="col-md-4">
-          <h2>RISE Strategy</h2>
+          <!-- Add an icon before the heading text -->
+          <h2>
+            <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
+            RISE Strategy
+          </h2>
           <p>
             Under its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy, 
             Intel sets ambitious 2030 goals, including driving industry-wide 
             progress on climate action, water stewardship, and waste reduction.
           </p>
           <!-- Learn More Button -->
-          <a href="#">Learn More</a>
+          <a href="#" class="learn-more-link">Learn More</a>
         </div>
 
         <!-- Column 2 -->
         <div class="col-md-4">
-          <h2>Commitment</h2>
+          <h2>
+            <i class="bi bi-flag" aria-hidden="true"></i>
+            Commitment
+          </h2>
           <p>
             In 2022, Intel pledged to achieve net-zero greenhouse gas emissions 
             (Scope 1 and 2) by 2040. This commitment builds on decades of 
@@ -191,12 +201,15 @@
             industry.
           </p>
           <!-- Learn More Button -->
-          <a href="#">Learn More</a>
+          <a href="#" class="learn-more-link">Learn More</a>
         </div>
 
         <!-- Column 3 -->
         <div class="col-md-4">
-          <h2>Water &amp; Waste</h2>
+          <h2>
+            <i class="bi bi-droplet-half" aria-hidden="true"></i>
+            Water &amp; Waste
+          </h2>
           <p>
             Intel conserves billions of gallons of water annually and 
             collaborates with local communities to restore watersheds.
@@ -204,7 +217,7 @@
             advance a circular economy.
           </p>
           <!-- Learn More Button -->
-          <a href="#">Learn More</a>
+          <a href="#" class="learn-more-link">Learn More</a>
         </div>
 
       </div>
@@ -212,12 +225,38 @@
   </section>
 
   <!-- Subscription Form -->
-  <section>
+  <section class="subscribe-section d-flex flex-column align-items-center justify-content-center">
     <h2>Subscribe to our Newsletter</h2>
     <!-- Add form here -->
+    <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </section>
 
-
+  <!-- Footer Section -->
+  <footer class="bg-light py-3 mt-4">
+    <div class="container d-flex flex-column align-items-center">
+      <!-- Navigation links -->
+      <div class="mb-2">
+        <a href="#" class="mx-2 text-decoration-none text-secondary">Privacy Policy</a>
+        <a href="#" class="mx-2 text-decoration-none text-secondary">Terms of Use</a>
+        <a href="#" class="mx-2 text-decoration-none text-secondary">Contact</a>
+      </div>
+      <!-- Copyright notice -->
+      <div class="text-secondary small">
+        &copy; 2024 Intel Corporation. All rights reserved.
+      </div>
+    </div>
+  </footer>
 
   <script>
     // List of right-to-left language codes
