Refactor sections to use custom elements for better semantics and update styles for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -165,11 +165,9 @@
     Scroll to view timeline | Hover over cards to learn more!
   </p>
 
- <!-- 3-Column Content Section -->
-  <section>
-    <!-- Bootstrap container-fluid for full-width layout -->
-    <div class="container-fluid">
-      <!-- Bootstrap row to hold the columns -->
+  <!-- 3-Column Content Section (now GoalSection) -->
+  <goalsection>
+    <div class="container-fluid bg-primary">
       <div class="row">
         
         <!-- Column 1: Uses col-md-4 to take up 1/3 of the row on medium+ screens -->
@@ -222,12 +220,11 @@
 
       </div>
     </div>
-  </section>
+  </goalsection>
 
-  <!-- Subscription Form -->
-  <section class="subscribe-section d-flex flex-column align-items-center justify-content-center">
+  <!-- Subscription Form (now SubtoNews) -->
+  <subtonews class="subscribe-section d-flex flex-column align-items-center justify-content-center bg-primary"> >
     <h2>Subscribe to our Newsletter</h2>
-    <!-- Add form here -->
     <form>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -240,11 +237,11 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-  </section>
+  </subtonews>
 
   <!-- Footer Section -->
-  <footer class="bg-light py-3 mt-4">
-    <div class="container d-flex flex-column align-items-center">
+  <footer class="bg-light py-3 mt-4" style = "background: #242222 !important;">
+    <div class="container d-flex flex-column align-items-center" padding="20px">
       <!-- Navigation links -->
       <div class="mb-2">
         <a href="#" class="mx-2 text-decoration-none text-secondary">Privacy Policy</a>
