Enhance layout with margin adjustments for header, sections, and subscription form for improved spacing and readability

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <!-- Header / Hero Section -->
-  <header>
+  <header class="my-5">
     <div>
       <!-- Intel Logo at the top -->
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
@@ -41,7 +41,7 @@
   </header>
 
   <!-- Timeline Cards Section: Each card shows a milestone year and event -->
-  <section>
+  <section class="my-5">
     <!-- Card 1: 1968 -->
     <carddiv>
       <h2>1968</h2>
@@ -161,13 +161,13 @@
   </section>
 
   <!-- Instruction for users -->
-  <p class="scroll-instruction">
+  <p class="scroll-instruction my-5">
     Scroll to view timeline | Hover over cards to learn more!
   </p>
 
   <!-- 3-Column Content Section (now GoalSection) -->
-  <goalsection>
-    <div class="container-fluid bg-primary">
+  <goalsection class="my-5">
+    <div class="container-fluid bg-primary height-100 p-5 text-black">
       <div class="row">
         
         <!-- Column 1: Uses col-md-4 to take up 1/3 of the row on medium+ screens -->
@@ -223,7 +223,7 @@
   </goalsection>
 
   <!-- Subscription Form (now SubtoNews) -->
-  <subtonews class="subscribe-section d-flex flex-column align-items-center justify-content-center bg-primary"> >
+  <subtonews class="subscribe-section d-flex flex-column align-items-center justify-content-center bg-background: #242222 p-2 text-white my-5">
     <h2>Subscribe to our Newsletter</h2>
     <form>
       <div class="mb-3">
@@ -240,7 +240,7 @@
   </subtonews>
 
   <!-- Footer Section -->
-  <footer class="bg-light py-3 mt-4" style = "background: #242222 !important;">
+  <footer class="bg-light py-3 mt-4 my-5" style = "background: #242222 !important;">
     <div class="container d-flex flex-column align-items-center" padding="20px">
       <!-- Navigation links -->
       <div class="mb-2">
