Refactor header section and enhance GoalSection with rounded corners for improved aesthetics

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <!-- Header / Hero Section -->
-  <header class="my-5">
+  <header>
     <div>
       <!-- Intel Logo at the top -->
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
@@ -167,7 +167,11 @@
 
   <!-- 3-Column Content Section (now GoalSection) -->
   <goalsection class="my-5">
-    <div class="container-fluid bg-primary height-100 p-5 text-black">
+    <!-- 
+      Added 'rounded-4' class for large rounded corners.
+      You can use 'rounded' for small, 'rounded-3' for medium, or 'rounded-4' for more pronounced corners.
+    -->
+    <div class="container-fluid bg-primary height-100 p-5 text-black rounded-2">
       <div class="row">
         
         <!-- Column 1: Uses col-md-4 to take up 1/3 of the row on medium+ screens -->
