Update subscription form heading and enhance styles for improved visibility and spacing

--- a/index.html
+++ b/index.html
@@ -228,16 +228,17 @@
 
   <!-- Subscription Form (now SubtoNews) -->
   <subtonews class="subscribe-section d-flex flex-column align-items-center justify-content-center bg-background: #242222 p-2 text-white my-5">
-    <h2>Subscribe to our Newsletter</h2>
+    <h2>Want more Intel?</h2>
     <form>
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <label for="exampleInputEmail1" class="form-label">Subscribe to our Newsletter</label>
+        <input 
+          type="email" 
+          class="form-control" 
+          id="exampleInputEmail1" 
+          aria-describedby="emailHelp"
+          placeholder="example@email.com">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
@@ -254,7 +255,7 @@
       </div>
       <!-- Copyright notice -->
       <div class="text-secondary small">
-        &copy; 2024 Intel Corporation. All rights reserved.
+        &copy; 2025 Intel Corporation. All rights reserved.
       </div>
     </div>
   </footer>
